[CHI-103] Add center alignment to alerts - resolve some issues

--- a/src/chi/components/alert/_alert-common.scss
+++ b/src/chi/components/alert/_alert-common.scss
@@ -44,7 +44,9 @@ $states: (
     position: relative;
 
     & i {
-      margin-right: 1rem;
+      &:not(.icon-x) {
+        margin-right: 1rem;
+      }
     }
 
     &.-center {
